# boot2deb

./: .gitignore  Cargo.toml  README.md  THIRD-PARTY-NOTICES.md  base.toml
.github/workflows/: mdbook.yml
arches/: arm64.toml  armv7.toml
base/overlay/etc/: rc.local
base/overlay/etc/systemd/system/: boot2deb-firstboot.service
base/overlay/etc/systemd/system/multi-user.target.wants/: boot2deb-firstboot.service
base/overlay/usr/lib/boot2deb/: first-boot
blobs/: README.md
blobs/keyrings/: README.md  debian-archive-keyring.README.md  debian-archive-keyring.fingerprints  jellyfin.README.md  jellyfin.fingerprints
boot-methods/: depthcharge.toml  rockchip-rkbin.toml
boot-methods/depthcharge/overlay-pre/etc/initramfs-tools/conf.d/: depthcharge.conf
boot-methods/depthcharge/overlay/etc/boot2deb/first-boot.d/: 10-depthcharge
boot-methods/rockchip-rkbin/overlay/boot/: mk_extlinux
boot-methods/rockchip-rkbin/overlay/etc/boot2deb/first-boot.d/: 10-extlinux
boot-methods/rockchip-rkbin/overlay/etc/kernel/postinst.d/: dtb_cp  kernel_chmod
boot-methods/rockchip-rkbin/overlay/etc/kernel/postrm.d/: dtb_rm  update_extlinux
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: args.rs  artifacts.rs  config.rs  fsutil.rs  main.rs  prompt.rs  render.rs  testsupport.rs  workdir.rs
crates/cli/src/commands/: build.rs  clean.rs  doctor.rs  list.rs  mod.rs  new_device.rs  patch.rs  resolve.rs  update.rs  verify_config.rs  verify_patches.rs  verify_sources.rs  why_rebuild.rs
crates/core/: Cargo.toml
crates/core/src/: chromeos.rs  error.rs  feature.rs  host.rs  kconfig.rs  lib.rs  loader.rs  lock.rs  mbox.rs  model.rs  profile.rs  provenance.rs  resolve.rs  scaffold.rs  size.rs  sources.rs
crates/engine/: Cargo.toml
crates/engine/src/: artstore.rs  blobs.rs  bootstrap.rs  checks.rs  debstore.rs  error.rs  event.rs  extradebs.rs  gc.rs  git.rs  kconfig.rs  keyring.rs  lib.rs  manifest.rs  netfetch.rs  patches.rs  patchfetch.rs  patchimport.rs  pins.rs  plan.rs  repo.rs  rootcache.rs  rootfs.rs  sandbox.rs  secret.rs  signature.rs  snapshot.rs  sources.rs  srcfetch.rs  toolchain.rs
crates/engine/src/image/: depthcharge.rs  ext4.rs  geometry.rs  gpt.rs  mod.rs
devices/: asus-c100p.toml  asus-c201.toml  asus-chromebit-cs10.toml  turing-rk1.toml
devices/asus-c201/: README.md
devices/asus-c201/overlay-pre/etc/initramfs-tools/scripts/panic/: boot2deb-breadcrumb
devices/asus-c201/overlay-pre/usr/share/initramfs-tools/modules.d/: veyron
devices/asus-c201/overlay/etc/boot2deb/first-boot.d/: 20-audio
devices/asus-c201/overlay/etc/modprobe.d/: veyron.conf
devices/turing-rk1/overlay/etc/boot2deb/first-boot.d/: 20-network
docs/: book.toml
docs/src/: SUMMARY.md  getting-started.md  introduction.md  kernel-upgrades.md  localization.md
docs/src/boards/: asus-c100p.md  asus-c201.md  asus-chromebit-cs10.md  turing-rk1.md
docs/src/contributing/: adding-a-board.md  adding-a-patch.md
docs/src/reference/: cli.md  config-model.md  image-identity.md  overlays.md  reproducibility.md
features/: jellyfin.toml  media-accel-rockchip.toml
features/jellyfin/: README.md
fragments/: README.md
fragments/accel/: full.config
fragments/base/: debian-arm64.config  debian-armhf.config
fragments/device/: turing-rk1.config
fragments/soc/: rk3288.config  rk3588.config
kernels/: debian-armmp.toml  rk3288-mainline-7.1.toml  rk3588-mainline-7.1.toml
recipes/: asus-c100p-forky.toml  asus-c100p-trixie.toml  asus-c201-forky.toml  asus-c201-mainline-forky.toml  asus-c201-trixie.toml  asus-chromebit-cs10-forky.toml  asus-chromebit-cs10-trixie.toml  turing-rk1-forky.toml  turing-rk1-jellyfin.toml  turing-rk1-media-accel-forky.toml  turing-rk1-media-accel-trixie.toml  turing-rk1-trixie.toml
socs/: rk3288.toml  rk3588.toml
socs/rk3288/: README.md
socs/rk3288/overlay-pre/etc/initramfs-tools/scripts/panic/: boot2deb-breadcrumb
socs/rk3288/overlay-pre/usr/share/initramfs-tools/modules.d/: veyron
socs/rk3288/overlay/etc/boot2deb/first-boot.d/: 20-audio
socs/rk3588/overlay/etc/modules-load.d/: rk3588-accel.conf
socs/rk3588/overlay/etc/udev/rules.d/: 99-rockchip-hw.rules
